attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1734741333653.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/StreamCryptoDFS/build
[ 13%] Built target dfs_crypto
[ 26%] Built target dfs_store
[ 46%] Built target dfs_network
[ 60%] Built target crypto_tests
[ 73%] Built target store_tests
[ 80%] Building CXX object CMakeFiles/network_tests.dir/tests/channel_test.cpp.o
/home/runner/StreamCryptoDFS/tests/channel_test.cpp: In member function ‘virtual void ChannelTest_SingleProduceConsume_Test::TestBody()’:
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:25:32: error: cannot convert ‘int’ to ‘dfs::network::MessageType’ in assignment
   25 |     input_frame.message_type = 1;
      |                                ^
      |                                |
      |                                int
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:28:17: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
   28 |     input_frame.payload_data = {'H', 'e', 'l', 'l', 'o'};
      |                 ^~~~~~~~~~~~
      |                 payload_size
In file included from /nix/store/ikmzrr3a8gd4jx31lkdhx7bk045j16fi-gtest-1.14.0-dev/include/gtest/gtest.h:72,
                 from /home/runner/StreamCryptoDFS/tests/channel_test.cpp:1:
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:41:28: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
   41 |     EXPECT_EQ(output_frame.payload_data, input_frame.payload_data);
      |                            ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:41:54: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
   41 |     EXPECT_EQ(output_frame.payload_data, input_frame.payload_data);
      |                                                      ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/tests/channel_test.cpp: In member function ‘virtual void ChannelTest_MultipleMessages_Test::TestBody()’:
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:54:30: error: cannot convert ‘int’ to ‘dfs::network::MessageType’ in assignment
   54 |         frame.message_type = i;
      |                              ^
      |                              |
      |                              int
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:57:15: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
   57 |         frame.payload_data = {static_cast<char>('A' + i)};
      |               ^~~~~~~~~~~~
      |               payload_size
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:70:32: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
   70 |         EXPECT_EQ(output_frame.payload_data, frames[i].payload_data);
      |                                ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:70:56: error: ‘__gnu_cxx::__alloc_traits<std::allocator<dfs::network::MessageFrame>, dfs::network::MessageFrame>::value_type’ {aka ‘struct dfs::network::MessageFrame’} has no member named ‘payload_data’; did you mean ‘payload_size’?
   70 |         EXPECT_EQ(output_frame.payload_data, frames[i].payload_data);
      |                                                        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/tests/channel_test.cpp: In lambda function:
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:99:38: error: cannot convert ‘const int’ to ‘dfs::network::MessageType’ in assignment
   99 |                 frame.message_type = i;
      |                                      ^
      |                                      |
      |                                      const int
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:102:23: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
  102 |                 frame.payload_data = {static_cast<char>(j & 0xFF)};
      |                       ^~~~~~~~~~~~
      |                       payload_size
/home/runner/StreamCryptoDFS/tests/channel_test.cpp: In member function ‘virtual void ChannelTest_LargeMessage_Test::TestBody()’:
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:155:32: error: cannot convert ‘int’ to ‘dfs::network::MessageType’ in assignment
  155 |     large_frame.message_type = 1;
      |                                ^
      |                                |
      |                                int
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:158:17: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
  158 |     large_frame.payload_data = large_payload;
      |                 ^~~~~~~~~~~~
      |                 payload_size
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:164:22: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
  164 |     EXPECT_EQ(output.payload_data, large_payload);
      |                      ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/tests/channel_test.cpp: In lambda function:
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:179:34: error: cannot convert ‘int’ to ‘dfs::network::MessageType’ in assignment
  179 |             frame.message_type = 1;
      |                                  ^
      |                                  |
      |                                  int
/home/runner/StreamCryptoDFS/tests/channel_test.cpp:182:19: error: ‘struct dfs::network::MessageFrame’ has no member named ‘payload_data’; did you mean ‘payload_size’?
  182 |             frame.payload_data = {static_cast<char>(produced & 0xFF)};
      |                   ^~~~~~~~~~~~
      |                   payload_size
make[2]: *** [CMakeFiles/network_tests.dir/build.make:104: CMakeFiles/network_tests.dir/tests/channel_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:226: CMakeFiles/network_tests.dir/all] Error 2
make: *** [Makefile:146: all] Error 2